Fixed alignment

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,7 +1,6 @@
 @media screen and (max-width: 1400px) {
     #profile {
         height: 83vh;
-        margin-bottom: 12rem;
     }
     .profile-picture {
         margin: 0 auto 2rem;
@@ -30,7 +29,7 @@
         gap: 0;
     }
     #profile {
-        margin-bottom: 0;
+        margin-bottom: 40vh;
     }
     #profile,
     .section-container {
